--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
-        <variable name="vm" type="com.ayratis.abstractapp.ui.notifications.NotificationsViewModel"/>
+        <variable name="vm" type="com.ayratis.abstractapp.ui.main.notifications.NotificationsViewModel"/>
 
     </data>
 
@@ -9,7 +9,7 @@
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context=".ui.notifications.NotificationsFragment">
+                 tools:context=".ui.main.notifications.NotificationsFragment">
 
         <TextView
                 android:layout_width="match_parent"
