--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.main._activity.MainActivity">
 
     <com.ayratis.abstractapp.views.CenteredTitleToolbar
             android:id="@+id/toolbar"
