--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
-        <variable name="vm" type="com.ayratis.abstractapp.ui.home.HomeViewModel"/>
+        <variable name="vm" type="com.ayratis.abstractapp.ui.main.home.HomeViewModel"/>
     </data>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context=".ui.home.HomeFragment">
+                 tools:context=".ui.main.home.HomeFragment">
 
         <TextView
                 android:layout_width="match_parent"
