--- a/app/src/main/res/layout/item_network_state.xml
+++ b/app/src/main/res/layout/item_network_state.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="networkState" type="com.ayratis.abstractapp.data.NetworkState"/>
         <variable name="retry" type="com.ayratis.abstractapp.arch.Action"/>
@@ -16,7 +16,7 @@
             android:padding="8dp">
 
         <TextView
-                isGone="@{networkState.message == null}"
+                app:isGone="@{networkState.message == null}"
                 android:text="@{networkState.message != null ? networkState.message : ``}"
                 android:id="@+id/errorMessageTextView"
                 android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
                 android:layout_gravity="center_horizontal" />
 
         <ProgressBar
-                isGone="@{networkState.status != status.RUNNING}"
+                app:isGone="@{networkState.status != status.RUNNING}"
                 android:id="@+id/loadingProgressBar"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
@@ -33,7 +33,7 @@
 
         <Button
                 android:onClick="@{() -> retry.call()}"
-                isGone="@{networkState.status != status.FAILED}"
+                app:isGone="@{networkState.status != status.FAILED}"
                 android:id="@+id/retryLoadingButton"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
@@ -43,32 +43,3 @@
 
     </LinearLayout>
 </layout>
-<!--<LinearLayout-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-              <!--android:layout_width="match_parent"-->
-              <!--android:layout_height="wrap_content"-->
-              <!--android:orientation="vertical"-->
-              <!--android:padding="8dp">-->
-
-    <!--<TextView-->
-            <!--android:id="@+id/errorMessageTextView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal" />-->
-
-    <!--<ProgressBar-->
-            <!--android:id="@+id/loadingProgressBar"-->
-            <!--style="?android:attr/progressBarStyle"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center" />-->
-
-    <!--<Button-->
-            <!--android:id="@+id/retryLoadingButton"-->
-            <!--style="@style/Widget.AppCompat.Button.Colored"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:text="retry" />-->
-
-<!--</LinearLayout>-->
