--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -9,7 +9,6 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            xmlns:bind="http://schemas.android.com/apk/res-auto"
             android:id="@+id/userContainer"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -26,7 +25,7 @@
             <ImageView
                     android:id="@+id/userAvatar"
                     android:layout_width="60dp"
-                    bind:glide="@{user.avatarUrl}"
+                    app:glide="@{user.avatarUrl}"
                     android:layout_height="match_parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="ContentDescription"
