--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,19 +2,33 @@
 <layout>
 
     <data>
-        <variable name="vm" type="com.ayratis.abstractapp.ui.main.dashoard.DashboardViewModel"/>
+        <variable name="vm" type="com.ayratis.abstractapp.ui.dashoard.DashboardViewModel"/>
     </data>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context=".ui.main.dashoard.DashboardFragment">
+                 tools:context=".ui.dashoard.DashboardFragment">
 
         <TextView
+                android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@{vm.text}"/>
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:id="@+id/photo_img"
+                android:layout_height="match_parent"/>
+        
+        <Button
+                android:layout_gravity="center"
+                android:id="@+id/btn_camera"
+                android:layout_width="wrap_content"
+                android:onClick="@{() -> vm.cameraClick()}"
+                android:text="@string/camera"
+                android:layout_height="wrap_content"/>
 
     </FrameLayout>
 </layout>
