--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
-        <variable name="vm" type="com.ayratis.abstractapp.ui.main.home.HomeViewModel"/>
+        <variable name="vm" type="com.ayratis.abstractapp.ui.home.HomeViewModel"/>
     </data>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context=".ui.main.home.HomeFragment">
+                 tools:context=".ui.home.HomeFragment">
 
         <TextView
+                android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@{vm.text}"/>
 
         <Button
-                android:layout_marginTop="300dp"
-                android:layout_marginStart="200dp"
-                android:text="gotolist"
+                android:layout_gravity="center"
+                android:text="@string/to_list"
                 android:onClick="@{() -> vm.goToList()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
