--- a/app/src/main/res/navigation/home.xml
+++ b/app/src/main/res/navigation/home.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/home"
-            app:startDestination="@id/homeFragment">
+<navigation
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/home"
+		app:startDestination="@id/homeFragment">
 
-    <fragment android:id="@+id/homeFragment" android:name="com.ayratis.abstractapp.ui.main.home.HomeFragment"
-              android:label="fragment_home" tools:layout="@layout/fragment_home">
-        <action android:id="@+id/action_homeFragment_to_listFragment" app:destination="@id/listFragment"/>
-    </fragment>
-    <fragment android:id="@+id/listFragment" android:name="com.ayratis.abstractapp.ui.main.list.ListFragment"
-              android:label="ListFragment"/>
+	<fragment
+			android:id="@+id/homeFragment"
+			android:name="com.ayratis.abstractapp.ui.home.HomeFragment"
+			android:label="@string/title_home"
+			tools:layout="@layout/fragment_home">
+		<action
+				android:id="@+id/action_homeFragment_to_listFragment"
+				app:destination="@id/listFragment" />
+	</fragment>
+	<fragment
+			android:id="@+id/listFragment"
+			android:name="com.ayratis.abstractapp.ui.list.ListFragment"
+			android:label="@string/title_list" />
 </navigation>
